--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/amenity.xsd">amenity</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/anchor.xsd">anchor</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/basic.xsd">basic</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/building.xsd">building</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/detail.xsd">detail</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/enumeration.xsd">enumeration</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/fixture.xsd">fixture</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/footprint.xsd">footprint</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/geofence.xsd">geofence</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/indoorgmlimdf.xsd">indoorgmlimdf</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/kiosk.xsd">kiosk</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/level.xsd">level</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/occupant.xsd">occupant</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/opening.xsd">opening</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/relationship.xsd">relationship</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/section.xsd">section</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/unit.xsd">unit</a>
-    <a href="file:///E:/%EB%B0%95%EC%8B%A0%EA%B7%9C%20%EC%9E%91%EC%97%85%EC%9E%A5/XML/XSD/imdfToIndoorGML_XSD/venue.xsd">venue</a>
+    <a href="./amenity.xsd">amenity</a>
+    <a href="./anchor.xsd">anchor</a>
+    <a href="./basic.xsd">basic</a>
+    <a href="./building.xsd">building</a>
+    <a href="./detail.xsd">detail</a>
+    <a href="./enumeration.xsd">enumeration</a>
+    <a href="./fixture.xsd">fixture</a>
+    <a href="./footprint.xsd">footprint</a>
+    <a href="./geofence.xsd">geofence</a>
+    <a href="./indoorgmlimdf.xsd">indoorgmlimdf</a>
+    <a href="./kiosk.xsd">kiosk</a>
+    <a href="./level.xsd">level</a>
+    <a href="./occupant.xsd">occupant</a>
+    <a href="./opening.xsd">opening</a>
+    <a href="./relationship.xsd">relationship</a>
+    <a href="./section.xsd">section</a>
+    <a href="./unit.xsd">unit</a>
+    <a href="./venue.xsd">venue</a>
 
 </body></html>
