--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./amenity.xsd">amenity</a>
-    <a href="./anchor.xsd">anchor</a>
-    <a href="./basic.xsd">basic</a>
-    <a href="./building.xsd">building</a>
-    <a href="./detail.xsd">detail</a>
-    <a href="./enumeration.xsd">enumeration</a>
-    <a href="./fixture.xsd">fixture</a>
-    <a href="./footprint.xsd">footprint</a>
-    <a href="./geofence.xsd">geofence</a>
-    <a href="./indoorgmlimdf.xsd">indoorgmlimdf</a>
-    <a href="./kiosk.xsd">kiosk</a>
-    <a href="./level.xsd">level</a>
-    <a href="./occupant.xsd">occupant</a>
-    <a href="./opening.xsd">opening</a>
-    <a href="./relationship.xsd">relationship</a>
-    <a href="./section.xsd">section</a>
-    <a href="./unit.xsd">unit</a>
-    <a href="./venue.xsd">venue</a>
-
-</body></html>
+    <ul>
+        <li><a href="./amenity.xsd">amenity</a></li>
+        <li><a href="./anchor.xsd">anchor</a></li>
+        <li><a href="./basic.xsd">basic</a></li>
+        <li><a href="./building.xsd">building</a></li>
+        <li><a href="./detail.xsd">detail</a></li>
+        <li><a href="./enumeration.xsd">enumeration</a></li>
+        <li><a href="./fixture.xsd">fixture</a></li>
+        <li><a href="./footprint.xsd">footprint</a></li>
+        <li><a href="./geofence.xsd">geofence</a></li>
+        <li><a href="./indoorgmlimdf.xsd">indoorgmlimdf</a></li>
+        <li><a href="./kiosk.xsd">kiosk</a></li>
+        <li><a href="./level.xsd">level</a></li>
+        <li><a href="./occupant.xsd">occupant</a></li>
+        <li><a href="./opening.xsd">opening</a></li>
+        <li><a href="./relationship.xsd">relationship</a></li>
+        <li><a href="./section.xsd">section</a></li>
+        <li><a href="./unit.xsd">unit</a></li>
+        <li><a href="./venue.xsd">venue</a></li>
+    </ul>
+</body>
+</html>
