move out to featureInformationType
made a feature.xsd what defined a data of feature for imdf

and changed a name of basic to indoorFeaturesForIMDF

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 </head>
 <body>
     <ul>
+        <li><a href="./indoorgmlimdf.xsd">indoorgmlimdf</a></li>
+        <li><a href="./indoorFeaturesForIMDF.xsd">indoorFeaturesForIMDF</a></li>
+        <li><a href="./feature.xsd">feature</a></li>
         <li><a href="./amenity.xsd">amenity</a></li>
         <li><a href="./anchor.xsd">anchor</a></li>
-        <li><a href="./basic.xsd">basic</a></li>
         <li><a href="./building.xsd">building</a></li>
         <li><a href="./detail.xsd">detail</a></li>
         <li><a href="./enumeration.xsd">enumeration</a></li>
         <li><a href="./fixture.xsd">fixture</a></li>
         <li><a href="./footprint.xsd">footprint</a></li>
         <li><a href="./geofence.xsd">geofence</a></li>
-        <li><a href="./indoorgmlimdf.xsd">indoorgmlimdf</a></li>
         <li><a href="./kiosk.xsd">kiosk</a></li>
         <li><a href="./level.xsd">level</a></li>
         <li><a href="./occupant.xsd">occupant</a></li>
