--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <ul>
         <li><a href="./indoorgmlimdf.xsd">indoorgmlimdf</a></li>
-        <li><a href="./indoorFeaturesForIMDF.xsd">indoorFeaturesForIMDF</a></li>
+        <li><a href="./indoorfeaturesforIMDF.xsd">indoorfeaturesforIMDF</a></li>
         <li><a href="./feature.xsd">feature</a></li>
         <li><a href="./amenity.xsd">amenity</a></li>
         <li><a href="./anchor.xsd">anchor</a></li>
