--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li><a href="./anchor.xsd">anchor</a></li>
         <li><a href="./building.xsd">building</a></li>
         <li><a href="./detail.xsd">detail</a></li>
+        <li><a href="./basic.xsd">basic</a></li>
         <li><a href="./enumeration.xsd">enumeration</a></li>
         <li><a href="./fixture.xsd">fixture</a></li>
         <li><a href="./footprint.xsd">footprint</a></li>
